--- a/.gitignore
+++ b/.gitignore
@@ -42,7 +42,7 @@ captures/
 
 # Intellij
 *.iml
-**/.idea/workspace.xml
+*.idea/workspace.xml
 **/.idea/tasks.xml
 **/.idea/gradle.xml
 **/.idea/dictionaries
