--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,9 @@
  */
 
 plugins {
+    id 'java'
     // Apply the java-library plugin to add support for Java Library
-    id 'java-library'
+    id 'application'
 }
 
 repositories {
@@ -18,8 +19,6 @@ repositories {
 }
 
 dependencies {
-    // This dependency is exported to consumers, that is to say found on their compile classpath.
-    api 'org.apache.commons:commons-math3:3.6.1'
 
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'com.google.guava:guava:27.0.1-jre'
@@ -30,3 +29,4 @@ dependencies {
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
 }
+mainClassName = 'quotes.App'
