--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Ignore Gradle project-specific cache directory
 .gradle
 
+.idea/workspace.xml
+
+
 # Ignore Gradle build output directory
 build
 # Created by https://www.gitignore.io/api/java,macos,android,androidstudio
